--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Tamtamtools</title>
+  <title>Uilauction admin</title>
   <!-- Import materialize.css -->
   <link rel="stylesheet" href="../../../css/style.css">
   <link rel="stylesheet" href="../../../css/colors/main.css" id="colors">
